--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,4 +1,7 @@
-.env
-
-dist
 node_modules
+# Keep environment variables out of version control
+.env
+dist
+
+# test.ts file for any tests
+test.ts
