--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,10 @@
   "author": "Prashant Acharya",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^2.30.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "prisma": "^2.30.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -17,6 +19,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.1.3"
   },
   "main": "dist/index.js",
