--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,12 +6,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist",
-    "baseUrl": "./src",
-    "paths": {
-      "*": ["node_modules/*"]
-    }
+    "outDir": "dist"
   },
   "include": ["src/**/*"]
 }
-
